--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/market.css
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/market.css
@@ -53,6 +53,19 @@
 		margin-right: inherit;
 	}
 
+
+	.tituloTops{
+		text-overflow: ellipsis;
+		overflow: hidden;
+		max-height: 2.2em;
+	}
+
+	.descripcionTops{
+		text-overflow: ellipsis;
+		overflow: hidden;
+		height: 4.5em;
+	}
+
 /*	.modal {
 		left: 50%;
 		bottom: auto;
