--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" href="../css/alertify.core.css"/>   	
 	
 	<script src="../js/Plugins/jquery.min.js"></script>
+	<script>
+		function confirmar(){
+			alertify.confirm('Message', function (e) {if (e) return true; else return false;});
+		}
+	</script>
 </head>
 
 <body style="background-color: whitesmoke;">
@@ -88,7 +93,7 @@
 		<div id="MP_Content" class="col-md-4" style="text-align: center;">
 		</div>
 		<div id="MP_Canvas" class="col-md-8">
-			<h4 id="MP_Descripcion"></h4>
+			<h4 id="MP_Descripcion" class="descripcionContenido"></h4>
 			<div id="EspecificosTipoContenido" class="col-md-12 Especificos">
 				<div id="espMusica" style="display:none">
 					<p></p><p></p><p></p>
@@ -113,7 +118,7 @@
 			<img id="star4" src="../img/estrellaAct.png" alt="../img/estrellaAct.png">
 			<img id="star5" src="../img/estrellaNoAct.png" alt="../img/estrellaNoAct.png">
 			</p>
-			<a href="#" id="comprarBtn" class="btn btn-info" role="button">Comprar</a>	
+			<a href="#" onclick="return confirmar();" id="comprarBtn" class="btn btn-info" role="button">Descargar</a>	
 			<p id="MP_Precio" class="precioContenido"></p>
 		</div>
 	</div>
@@ -122,7 +127,7 @@
 		------------------------------------
 		<h4>Me gusta mucho este contenido :D</h4>
 	</div>
-	<div class="facebookLike">	
+	<div class="facebookLike show">	
 	<a href="https://twitter.com/share" class="twitter-share-button" data-lang="es" data-count="none" data-dnt="true">Twittear</a>
 	<div class="fb-like" data-href="http://localhost:8080/SERVER-MODULE-PRESENTATION/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	</div>
