Paginado en Contenidos pendientes y Mis contenidos

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
@@ -95,20 +95,26 @@
 
 <!-- CONTENIDOS PENDIENTES DE CALIFICACION -->
 <div id="div_contenidosPendientes" class="col-md-7 hide">
-  <p class="lead text-center">Pendientes de Evaluacion</p>
-  <table class="table table-hover">
-    <thead><tr><th></th><th>Nombre</th><th>Tipo</th><th>Puntuacion</th></tr></thead>
-    <tbody id="tbody_pendientes"></tbody>
-  </table>
+    <p class="lead text-center">Pendientes de Evaluacion</p>
+    <table class="table table-hover">
+        <thead><tr><th></th><th>Nombre</th><th>Tipo</th><th>Puntuacion</th></tr></thead>
+        <tbody id="tbody_pendientes"></tbody>
+    </table>
+    <div class="pagination pagination-mini" style="display: initial;">
+        <ul class="pager" id="paginadoPendientes"></ul>
+    </div>
 </div>
 
 <!-- DIV CONTENIDOS DE USUARIO -->
 <div id="div_contenidosUsuario" class="col-md-7 hide">
-  <p class="lead text-center">Mis contenidos</p>
-  <table class="table table-hover">
-    <thead><tr><th></th><th>Nombre</th><th>Tipo</th><th>Puntacion</th></tr></thead>
-    <tbody id="tbody_contenidos"></tbody>
-  </table>            
+    <p class="lead text-center">Mis contenidos</p>
+    <table class="table table-hover">
+        <thead><tr><th></th><th>Nombre</th><th>Tipo</th><th>Puntacion</th></tr></thead>
+        <tbody id="tbody_contenidos"></tbody>
+    </table>
+    <div class="pagination pagination-mini" style="display: initial;">
+        <ul class="pager" id="paginadoMisContenidos"></ul>
+    </div>
 </div>
 
 <!-- ACA VAN LOS DIVS RESTANTES-->
