arreglos de ultima hora

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
@@ -259,7 +259,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal">Close</button>
-                <button onclick="actualizarParametrosBusqueda()" type="button" class="btn btn-primary">Guardar Cambios</button> 
+                <button onclick="actualizarParametrosBusqueda()" data-dismiss="modal" type="button" class="btn btn-primary">Guardar Cambios</button> 
             </div>
         </div>
     </div>
