--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -123,7 +123,7 @@
 	</div>
 	<div class="facebookLike show">	
 	<a href="https://twitter.com/share" class="twitter-share-button" data-lang="es" data-count="none" data-dnt="true">Twittear</a>
-	<div class="fb-like" data-href="http://localhost:8080/SERVER-MODULE-PRESENTATION/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+	<div class="fb-like" data-href="http://localhost:8080/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	</div>
 
 <!-- RESULTADOS DE BUSQUEDA -->
